add argparse subparser (manage.py dbinit)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,5 @@
-aiofiles==0.4.0
-aiohttp==3.4.4
-async-timeout==3.0.1
-atomicwrites==1.2.1
-attrs==18.2.0
-chardet==3.0.4
-Click==7.0
-DateTime==4.3
-httptools==0.0.11
-idna==2.7
-idna-ssl==1.1.0
-marshmallow==2.15.6
-more-itertools==4.3.0
-multidict==4.4.2
-pluggy==0.8.0
-psycopg2==2.7.5
-py==1.7.0
-pytest==3.9.1
-pytz==2018.5
-sanic==0.8.3
-six==1.11.0
+aiopg==0.15.0
 SQLAlchemy==1.2.12
-ujson==1.35
-uvloop==0.11.2
-websockets==5.0.1
-yarl==1.2.6
-zope.interface==4.5.0
+sanic==0.8.3
+aiohttp==3.4.4
+marshmallow==2.15.6
